# cpp-project-template

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  tasks.py
.github/workflows/: ci.yml
cmake/: ConfigureTarget.cmake  Deps.cmake  GetCPM.cmake  SourceFileManifest.cmake
include/mgfw/: CVar.hpp  Clock.hpp  EventReader.hpp  EventWriter.hpp  IClock.hpp  ILogger.hpp  Injector.hpp  MQHive.hpp  MessageQueue.hpp  Scheduler.hpp  SpdlogLogger.hpp  StringKey.hpp  SyncCell.hpp  TypeHash.hpp  TypeMap.hpp  TypeString.hpp  Window.hpp  defer.hpp  fnv1a.hpp  types.hpp
src/: main.cpp
src/mgfw/: Clock.cpp  Injector.cpp  Scheduler.cpp  SpdlogLogger.cpp  Window.cpp
test/: CMakeLists.txt
test/include/mgfw_test/: ClockMock.hpp  LoggerMock.hpp
test/integration/: CMakeLists.txt  bulkmsg.cpp  smoke.cpp
test/unit/: CVar_test.cpp  Injector_test.cpp  MQHive_test.cpp  Scheduler_test.cpp  SyncCell_test.cpp  TypeHash_test.cpp  TypeMap_test.cpp  TypeString_test.cpp  defer_test.cpp  events_test.cpp  smoke_test.cpp
